--- a/web/src/components/ui/ui.css
+++ b/web/src/components/ui/ui.css
@@ -207,7 +207,7 @@ button.card-action:focus.focus-visible path {
         z-index: var(--middle-z-index);
         background: var(--white);
         font-size: var(--font-size-xs);
-        color: var(--warm-grey);
+        color: var(--near-black);
     }
 
     & input,
