fix(styles): global layout styles

--- a/web/src/components/layout/nav.css
+++ b/web/src/components/layout/nav.css
@@ -6,12 +6,12 @@ header {
     display: flex;
     align-items: center;
     height: var(--header-height);
-    box-sizing: border-box;
     transition: background-color var(--transition-duration) linear,
         box-shadow var(--transition-duration) linear;
     padding: var(--page-margin);
     background: var(--white);
     z-index: var(--header-z-index);
+    border-bottom: 1px solid var(--light-grey);
 
     @media (--lg-up) {
         position: relative;
@@ -93,7 +93,6 @@ header {
 }
 
 .nav-list {
-    box-sizing: border-box;
     min-height: 100%;
 
     &,
@@ -209,7 +208,6 @@ header {
 }
 
 #navigation-modal {
-    box-sizing: border-box;
     background-color: var(--white);
     position: fixed;
     top: 0;
