--- a/web/src/components/index.css
+++ b/web/src/components/index.css
@@ -18,6 +18,14 @@
     src: url('/font/icomoon.ttf');
 }
 
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 /* Zilla Slab has a limited glyph support range so switch to
    Noto in known cases */
 html[lang='ab'],
@@ -167,14 +175,8 @@ button {
 
 #main {
     position: relative;
-    box-sizing: border-box;
     background-color: var(--white);
     animation: fadein var(--transition-duration-slow) linear;
-}
-
-.profile #content {
-    margin: 0 auto;
-    max-width: var(--old-desktop-width);
 }
 
 .privacy,
@@ -216,34 +218,7 @@ button {
 }
 
 #content {
-    position: relative;
     min-height: 80vh;
-    border-top: 1px solid var(--light-grey);
-
-    @media (--md-up) {
-        position: unset;
-        flex: 1 1 100%;
-        padding: 0 var(--page-margin);
-    }
-
-    > div {
-        box-sizing: border-box;
-        transition: opacity var(--transition-duration-slow) var(--easing);
-        max-width: var(--desktop-width);
-        margin-right: auto;
-        margin-left: auto;
-        min-height: 100%;
-        padding: 0 var(--page-margin);
-
-        @media (--md-up) {
-            min-height: auto;
-            padding: 0;
-        }
-
-        @media (--xl-up) {
-            max-width: var(--wide-desktop-width);
-        }
-    }
 }
 
 .main-logo {
